Refactor names templates

--- a/templates/card.html
+++ b/templates/card.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Candidate</title>
 </head>
 <body>
 <h1>{{ candidate["name"] }}</h1>
