Refactor html code

--- a/templates/card.html
+++ b/templates/card.html
@@ -5,9 +5,9 @@
     <title>Candidate</title>
 </head>
 <body>
-<h1>{{ candidate["name"] }}</h1>
-<p>{{ candidate["position"] }}</p>
-<img src="{{ candidate["picture"] }}" alt="Candidate">
-<p>{{ candidate["skills"] }}</p>
+<h1>{{ candidate.name }}</h1>
+<p>{{ candidate.position }}</p>
+<img src="{{ candidate.picture }}" alt="Candidate">
+<p>{{ candidate.skills }}</p>
 </body>
 </html>
