--- a/templates/skill.html
+++ b/templates/skill.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Найдено со скиллом {{ skill_name }}: {{ candidates_count }}</h1>
 {% for candidate in candidates_skill %}
-    <p><a href="/candidate/{{ candidate["id"] }}">{{ candidate["name"] }}</a></p>
+    <p><a href="/candidate/{{ candidate.id }}">{{ candidate.name }}</a></p>
 {% endfor %}
 </body>
 </html>
